# python-studies

./: .flake8  .gitignore  1.1General_python.py  1.General.ipynb  10.Regex.ipynb  100.Random.ipynb  11. google_calendar_tests.ipynb  12.Datetime.ipynb  3.0.Functions.ipynb  3.1.built+in+functions.ipynb  3.2.Generators.ipynb  4.Lists.ipynb  5.for+loops.ipynb  6.While+Loops+and+The+Break+Statement.ipynb  8.Dictionaries.ipynb  9.Classes+and+objects.ipynb  README.md  decode_verify_jwt.py  pyproject.toml  variables.py
codewars/: 7kyu.ipynb  8kyu.ipynb  regexp_katas.ipynb
pytest/: pytest.ini  report.html  test_First.py  test_fixtures.py  test_markers_custom.py  test_markers_params.py  test_markers_skip_xfail.py
